@@ -40,3 +40,32 @@ Disadvantages of GC
 2. **Parallel garbage collector**
 3. **G1 Garbage collector**
 4. **Z Garbage Collector**
+
+## Serial Garbage Collector
+
+1. Works on Single thread. GC Implementation freezes all the application threads when it runs. Probably not a good idea to use it when multi threaded applications.
+2. To enable it - java -XX:+UseSerialGC -jar Application.java
+
+## Parallel Garbage Collector
+
+1. Default GC of the JVM from java5 to java8.
+2. Uses multiple threads to manage heap space.
+3. It uses multiple threads for managing heap space, can also freeze other application threads while performing GC (I doubt if it can do that, the online source I am referring to makes that statement. But my understanding is each process will have a thread and every app will have its process. Hence threads are isolated from each app. if a thread has issue it will bring down a process and hence the app.)
+4. We can specify max garbage collection threads and pause time, throughput and footprint (heap size)
+5. Can be configured - java -XX:+UseParallelGC -jar Application.java
+
+## G1 Garbage collector
+
+1. Is designed for applications running on multi processor machine with large memory space.
+2. It marks first and then tracks.
+3. Second phase will be to sweep and clear the memory off. hence the name G1 or the garbage first.
+4. can be configured - java -XX:+UseG1GC -jar Application.java
+
+## Z Garbage collector
+
+1. without stopping the execution of application threads for more than 10ms.
+2. suitable for low latency app
+3. it uses load barriers with colored pointers to perform concurrent operations when the thread is running.
+4. Colored pointers is the core of ZGC. It uses some bits (metadata bits) of reference to mark the state of the object.
+5. Handles heaps ranging from 8MB to 16TB in size.
+6. can be configured - java -XX:+UnlockExperimentalVMOptions -XX:+UseZGC Application.java
